--- a/tentangkami.html
+++ b/tentangkami.html
@@ -156,8 +156,25 @@
     <p class="intro">
       AERUZEON adalah perusahaan kreatif digital yang Rilis pada 05/05/2025 Dan berfokus pada inovasi teknologi,
       solusi edukasi, dan layanan digital yang berdampak luas. Kami percaya bahwa masa depan
-      adalah digital — dan kami hadir untuk membantu Anda tumbuh di dalamnya.
-    </p><div class="section">
+      adalah digital — dan kami hadir untuk membantu Anda tumbuh di dalamnya.<BR>
+      
+    </p>
+    
+    <div class="section">
+
+<ul>
+  <H2>BIODATA</H2>
+  <li>NAMA BRAND: AERUZEON</li><BR>
+  <li>TANGGAL RILIS: 05 MEI 2025</li><BR>
+  <li>DIDIRIKAN OLEH: IQBAL SYAHPUTRA</li><BR>
+  <li>BIDANG FOKUS: LAYANAN DIGITAL, EDUKASI, TEKNOLOGI, PENGEMBANGAN BOT & PANEL</li><BR>
+  <li>WEBSITE RESMI: <a href="https://iqbalsyahputra123.github.io" target="_blank">iqbalsyahputra123.github.io</a></li><BR>
+  <li>CHANNEL WA RESMI: <a href="-" target="_blank">AERUZEON CHANNEL</a></li><BR>
+  <li>MARKAS OPERASIONAL: ONLINE - INDONESIA BASED</li>
+</ul><BR>
+  </div>
+
+  <div class="section">
   <h2>Visi Kami</h2>
   <p>
     Menjadi ekosistem digital terdepan yang menghubungkan kreativitas, teknologi,
